--- a/awesome/css/style.css
+++ b/awesome/css/style.css
@@ -6,7 +6,6 @@
 h2{
     font-family: Raleway;
     font-size: 36px;
-    left: calc(50% - 1200px/2 + 1px);
     font-style: normal;
     font-weight: 400;
     text-align: center;
@@ -15,7 +14,7 @@ h2{
 
 .awesome_block_line{
     border-bottom: 1px solid #EC7979;
-    margin-left: 520px;
+    margin-: 520px;
     width: 170px;
     margin-bottom: 30px;
 }
@@ -40,11 +39,6 @@ h2{
 .awesome_block_one h4{
     font-family: Open Sans;
     font-size: 24px;
-    position: absolute;
-    left: 11.39%;
-    right: 64.17%;
-    top: 41.55%;
-    bottom: 56.65%;
     text-align: center;
     font-style: normal;
     font-weight: 700;
@@ -57,31 +51,17 @@ h2{
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    position: absolute;
-    left: 11.32%;
-    right: 64.17%;
-    top: 43.49%;
-    bottom: 54.61%;
 }
 
 .awesome_block_one_circle{
     border: 1px solid #EC7979;
     border-radius: 50%;
-    box-sizing: border-box; 
-    left: 20%;
-    right: 22.94%;
-    top: 30%;
-    bottom: 22.94%;
     height: 90px;
     width: 90px;
-    position: absolute;
+    margin-: 150px;
 }
 
 .awesome_block_one_circle img{
-    left: 30.8%;
-    right: 30.8%;
-    top: 30.8%;
-    bottom: 30.8%;
     height: 65px;
     width: 65px;
     padding: 10px;
@@ -89,6 +69,8 @@ h2{
 
 .awesome_block_two{
     width: 370px;
+    margin-: 400px;
+    margin-top: -350px;
 }
 
 .awesome_block_two h4{
@@ -97,11 +79,6 @@ h2{
     text-align: center;
     font-style: normal;
     font-weight: 700;
-    position: absolute;
-    left: 37.88%;
-    right: 37.68%;
-    top: 41.55%;
-    bottom: 56.65%;
 }
 
 .awesome_block_two h5{
@@ -109,11 +86,6 @@ h2{
     font-family: Raleway;
     text-align: center;
     font-size: 18px;
-    position: absolute;
-    left: 37.81%;
-    right: 37.68%;
-    top: 43.49%;
-    bottom: 54.61%;
     font-style: normal;
     font-weight: 400;
 }
@@ -121,31 +93,21 @@ h2{
 .awesome_block_two_circle{
     border: 1px solid #EC7979;
     border-radius: 50%;
-    box-sizing: border-box; 
-    right: 22.94%;
-    top: 30%;
-    bottom: 22.94%;
     height: 90px;
-    width: 90px;
-    position: absolute;
-    left: 720px;
-    
+    width: 90px;   
+    margin-: 150px;
 }
 
 .awesome_block_two_circle img{
-    position: absolute;
-    left: 30.59%;
-    right: 30.59%;
-    top: 36.47%;
-    bottom: 36.47%;
     height: 65px;
     width: 65px;
-    margin: -15px;
-    margin-top: -20px;
+    margin: 12px;
 }
 
 .awesome_block_three{
     width: 370px;
+    margin-: 800px;
+    margin-top: -350px;
 }
 
 .awesome_block_three h4{
@@ -154,11 +116,6 @@ h2{
     text-align: center;
     font-style: normal;
     font-weight: 700;
-    position: absolute;
-    left: 64.37%;
-    right: 11.19%;
-    top: 41.55%;
-    bottom: 56.65%;
 }
 
 .awesome_block_three h5{
@@ -166,11 +123,6 @@ h2{
     font-family: Raleway;
     text-align: center;
     font-size: 18px;
-    position: absolute;
-    left: 64.3%;
-    right: 11.19%;
-    top: 43.49%;
-    bottom: 54.61%;
     font-style: normal;
     font-weight: 400;
 }
@@ -178,24 +130,13 @@ h2{
 .awesome_block_three_circle{
     border: 1px solid #EC7979;
     border-radius: 50%;
-    box-sizing: border-box; 
-    right: 22.94%;
-    top: 30%;
-    bottom: 22.94%;
     height: 90px;
     width: 90px;
-    position: absolute;
-    left: 1115px;
+    margin-: 150px;
 }
 
 .awesome_block_three_circle img{
-    position: absolute;
-    left: 38.24%;
-    right: 35.88%;
-    top: 30.59%;
-    bottom: 30.59%;
     height: 65px;
     width: 65px;
-    margin: -15px;
-    margin-left: -20px;
+    margin: 15px;
 }
