--- a/awesome/css/style.css
+++ b/awesome/css/style.css
@@ -14,7 +14,7 @@ h2{
 
 .awesome_block_line{
     border-bottom: 1px solid #EC7979;
-    margin-: 520px;
+    margin-left: 520px;
     width: 170px;
     margin-bottom: 30px;
 }
@@ -26,6 +26,7 @@ h2{
     font-weight: 400;
     text-align: center;
     color: #86878B;
+    margin-bottom: 80px;
 }
 
 .awesome_block_one{
@@ -45,7 +46,7 @@ h2{
 }
 
 .awesome_block_one h5{
-    margin-top: 80px;
+    margin-top: 20px;
     font-family: Raleway;
     text-align: center;
     font-size: 18px;
@@ -58,7 +59,7 @@ h2{
     border-radius: 50%;
     height: 90px;
     width: 90px;
-    margin-: 150px;
+    margin-left: 150px;
 }
 
 .awesome_block_one_circle img{
@@ -69,8 +70,8 @@ h2{
 
 .awesome_block_two{
     width: 370px;
-    margin-: 400px;
-    margin-top: -350px;
+    margin-left: 400px;
+    margin-top: -300px;
 }
 
 .awesome_block_two h4{
@@ -82,7 +83,7 @@ h2{
 }
 
 .awesome_block_two h5{
-    margin-top: 80px;
+    margin-top: 20px;
     font-family: Raleway;
     text-align: center;
     font-size: 18px;
@@ -95,7 +96,7 @@ h2{
     border-radius: 50%;
     height: 90px;
     width: 90px;   
-    margin-: 150px;
+    margin-left: 150px;
 }
 
 .awesome_block_two_circle img{
@@ -106,8 +107,8 @@ h2{
 
 .awesome_block_three{
     width: 370px;
-    margin-: 800px;
-    margin-top: -350px;
+    margin-left: 800px;
+    margin-top: -300px;
 }
 
 .awesome_block_three h4{
@@ -119,7 +120,7 @@ h2{
 }
 
 .awesome_block_three h5{
-    margin-top: 80px;
+    margin-top: 20px;
     font-family: Raleway;
     text-align: center;
     font-size: 18px;
@@ -132,7 +133,7 @@ h2{
     border-radius: 50%;
     height: 90px;
     width: 90px;
-    margin-: 150px;
+    margin-left: 150px;
 }
 
 .awesome_block_three_circle img{
