--- a/awesome/css/style.css
+++ b/awesome/css/style.css
@@ -26,16 +26,15 @@ h2{
 
 /* line */
 
-.awesome_block_line{
+.block_line{
     border-bottom: 1px solid #EC7979;
-    margin-left: 500px;
     width: 170px;
-    margin-bottom: 30px;
+    margin: 0px auto 30px auto;
 }
 
 /* subtitle */
 
-.awesome_block_text{
+.block_text{
     font-family: Raleway;
     font-size: 18px;
     font-style: normal;
@@ -48,7 +47,7 @@ h2{
 /* awesome_ block margin */
 
 .awesome_block{
-    margin-left: 35px;
+    margin-left: 15px;
 }
 
 /* cart */
@@ -92,7 +91,7 @@ h2{
     border-radius: 50%;
     height: 90px;
     width: 90px;
-    margin-left: 150px;
+    margin: 40px 0 40px 150px;
 }
 
 /* cart circle1 img */
@@ -120,5 +119,61 @@ h2{
 .awesome_block_circle_three img{
     margin-left: 10px;
     padding: 15px;
+}
+
+.pricing h2{
+    margin-top: 150px;
+}
+
+.pricing_block{
+    width: 370px;
+    display: inline-block;
+    margin-bottom: 100px;
+}
+
+.pricing_block_list{
+    text-decoration: none;
+    list-style: none;
+    color: #86878B;
+    background: #FFFFFF;
+    border: 1px solid #F5F5F5;
+    font-family: Raleway;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    padding: 15px 0;
+}
+
+.pricing_block_list_tarif{
+    font-family: Open Sans;
+    font-weight: 700;
+    font-size: 24px;
+    color: #FFFFFF;
+    background-color: #333333;
+}
+
+.pricing_block_list_price{
+    font-family: Raleway;
+    font-size: 36px;
+    font-weight: 700;
+    color: #FFFFFF;
+    background-color: #333333;
+    font-style: normal;
+}
+
+.pricing_block_list_information{
+    font-family: Raleway;
+    font-size: 18px;
+    background-color: #333333;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.pricing_block_two{
+    margin-left: 15px;
+    filter: drop-shadow(0px 4px 10px rgba(51, 51, 51, 0.2));
+}
+
+.pricing_block_three{
+    margin-left: 15px;
 }
 
