--- a/awesome/css/style.css
+++ b/awesome/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style-type: none;
 }
 
 /* wrapper */
@@ -12,7 +13,82 @@
     margin: 0 auto;
     padding: 0 15px;
 }
+.tabs{
+    margin-top: 40px;
+    margin-bottom: 120px;
+}
 
+.tabs__table{
+    display: flex;
+}
+
+.tabs__info{
+    border: 1px solid #C6CBCD;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+}
+
+.tabs__info-subtitle{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 41px;
+    margin-top: 40px;
+    margin-left: 100px;
+}
+
+.tabs__table-item{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    padding: 10px 80px;
+}
+
+.tabs__table-item-one{
+    border: 1px solid #C6CBCD;
+    border-bottom: 1px solid white;
+    margin-bottom: -1px;
+    border-radius: 3px 3px 0 0;
+}
+
+.tabs__info-text-all{
+    width: 600px;
+}
+
+.tabs__info-text-all-paragraf-buttom{
+    margin-top: 20px;
+}
+
+.tabs__info-text-all-paragraf{
+    margin-left: 100px;
+} 
+
+.tabs__table-text-all-paragraf{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.tabs__button{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: #FFFFFF;
+    background: #EC7979;
+    width: 270px;
+    padding: 15px 0;
+    border: none;
+    margin-top: 40px;
+    margin-left: 100px;
+}
 /* h2 */
 
 h2{
@@ -23,6 +99,7 @@ h2{
     text-align: center;
     margin-bottom: 50px;
 }
+
 
 /* line */
 
@@ -48,6 +125,7 @@ h2{
 
 .awesome-block{
     margin-left: 15px;
+    margin-bottom: 50px;
 }
 
 /* cart */
@@ -96,7 +174,7 @@ h2{
 
 /* cart circle1 img */
 
-.awesome-block__circle_one img{
+.awesome-block__cart_one img{
     padding: 7px;
 }
 
@@ -121,10 +199,9 @@ h2{
     padding: 15px;
 }
 
-/* h2 */
-
-.pricing h2{
-    margin-top: 150px;
+.pricing {
+    background-color: rgba(245, 245, 245, 1);
+    padding-top: 60px;
 }
 
 /* block pricing  */
@@ -132,8 +209,9 @@ h2{
 .pricing-block{
     width: 370px;
     display: inline-block;
-    margin-bottom: 100px;
 }
+
+/* block pricing list */ 
 
 .pricing-block__list_text{
     list-style: none;
@@ -147,6 +225,8 @@ h2{
     padding: 15px 0;
 }
 
+/* block pricing list tarif */ 
+
 .pricing-block__list_text_tarif{
     font-family: Open Sans;
     font-weight: 700;
@@ -154,6 +234,8 @@ h2{
     color: #FFFFFF;
     background-color: #333333;
 }
+
+/* block pricing list price */ 
 
 .pricing-block__list_text_price{
     font-family: Raleway;
@@ -164,6 +246,8 @@ h2{
     font-style: normal;
 }
 
+/* block pricing list information */ 
+
 .pricing-block__list_text_information{
     font-family: Raleway;
     font-size: 18px;
@@ -171,10 +255,14 @@ h2{
     color: rgba(255, 255, 255, 0.5);
 }
 
+/* block pricing two */ 
+
 .pricing-block__two{
     margin-left: 25px;
     filter: drop-shadow(0px 4px 10px rgba(51, 51, 51, 0.2));
 }
+
+/* block pricing three */ 
 
 .pricing-block__three{
     margin-left: 25px;
