--- a/awesome/css/style.css
+++ b/awesome/css/style.css
@@ -202,7 +202,6 @@ h2{
     background-color: rgba(245, 245, 245, 1);
     padding-top: 60px;
     padding-bottom: 40px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     margin-bottom: 70px;
 }
 
@@ -280,8 +279,6 @@ h2{
 }
 
 .customer-block__comment-text{
-    width: 370px;
-	height: 180px;
     position: relative;
     background: #E2E2E2;
     border-radius: 10px;
@@ -293,7 +290,7 @@ h2{
     line-height: 21px;
     text-align: center;
     color: #86878B;
-    padding-top: 40px;
+    padding: 30px 15px;
 }
 
 .customer-block__comment-text::after{
@@ -315,7 +312,7 @@ h2::after{
     content: '';
     border-bottom: 1px solid #EC7979;
     width: 170px;
-    margin: 50px auto 30px auto;
+    margin: 40px auto 30px auto;
     display: block;
 }
 
