--- a/awesome/css/style.css
+++ b/awesome/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     box-sizing: border-box;
     list-style-type: none;
+    text-decoration: none;
 }
 
 /* wrapper */
@@ -13,23 +14,233 @@
     margin: 0 auto;
     padding: 0 15px;
 }
+
+.header{
+    position: relative;
+    z-index: auto;
+    background-color: #000000;
+}
+
+.header-block{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.nav{
+    display: flex;
+    justify-content: right;
+    width: 80%;
+}
+
+.banner-title{
+    margin-top: 50px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 56px;
+    color: #E2E2E2;
+    padding: 0 50px 0 0;
+}
+
+.banner-title::after{
+    content: '';
+    border-bottom: 1px solid #FFFFFF;;
+    width: 170px;
+    margin: 60px 0;
+    display: block;
+}
+
+.banner-text{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+}
+
+.banner-button{
+    border: 2px solid #FFFFFF;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: #FFFFFF;
+    margin-bottom: -40px;
+    padding: 15px 90px;
+    cursor: pointer;
+    align-items: center;
+    transition: 0.3s;
+    display: inline-block;  
+    margin-top: 40px;
+}
+
+.banner-form{
+    background: #FFFFFF;
+    border-radius: 10px;
+    height: 450px;
+    width: 470px;
+}
+
+.banner-form__title{
+    font-family: Open Sans;
+    text-align: center;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #333333;
+    padding: 20px 0;
+    width: 470px;
+}
+
+.banner-form__title-red{
+    color: #EC7979;
+}
+
+.banner-input{
+    font-family: Open Sans;
+    font-style: normal;
+    color: #BDBDBD;
+    font-weight: 400;
+    font-size: 14px;
+    width: 100%;
+    padding: 6px 14px;
+    border: none;
+    position: relative;
+    border-bottom: 1px solid #BDBDBD;
+    width: 370px;
+    margin-left: 40px;
+    margin-top: 40px;
+}
+
+.banner-download{
+    background-color: #EC7979;
+    color: #FFFFFF;
+    font-family: Open sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    height: 60px;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    transition: 0.3s;
+    margin-top: 100px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+.social{
+    background: #F8EFEF;
+}
+
+.social-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-information{
+    width: 470px;
+}
+
+.social-text{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 33px;
+    color: #333333;
+    margin-top: 20px;
+}
+
+.social-paragraf{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #86878B;
+    padding: 18px 0;
+}
+
+.social-img{
+    width: 670px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-img__link{
+    width: 70px;
+    height: 70px;
+}
+
+.nav-list{
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+}
+
+.nav-list__link{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    color: #FFFFFF;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.banner{
+    background: url("../images/back.jpg") center/cover no-repeat;
+    position: relative;
+    width: 100%;
+    z-index: 0;
+    height: 920px;
+}
+
+.banner::after{
+    top: 0;
+    left: 0;
+    content: "";
+    z-index: -1;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.banner-block{
+    padding: 200px 0 0 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+
 .tabs{
     margin-top: 40px;
     margin-bottom: 120px;
 }
 
-.tabs__table{
+.tabs-table{
     display: flex;
 }
 
-.tabs__info{
+.tabs-info{
     border: 1px solid #C6CBCD;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
 }
 
-.tabs__info-subtitle{
+.tabs-info__subtitle{
     font-family: Open Sans;
     font-style: normal;
     font-weight: 700;
@@ -41,7 +252,7 @@
     margin-bottom: 50px;
 }
 
-.tabs__table-item{
+.tabs-table__item{
     font-family: Open Sans;
     font-style: normal;
     font-weight: 400;
@@ -50,14 +261,14 @@
     padding: 10px 80px;
 }
 
-.tabs__table-item-one{
+.tabs-table__item-one{
     border: 1px solid #C6CBCD;
     border-bottom: 1px solid white;
     margin-bottom: -1px;
     border-radius: 3px 3px 0 0;
 }
 
-.tabs__info-text-all{
+.tabs-info__text-all{
     padding-left: 90px;
     font-family: Raleway;
     font-weight: 400;
@@ -75,11 +286,11 @@
     line-height: 21.13px;
 }
 
-.tabs__img{
+.tabs-img{
     display: block;
 }
 
-.tabs__button{
+.tabs-button{
     font-family: Open Sans;
     font-style: normal;
     font-weight: 600;
@@ -93,7 +304,7 @@
     text-decoration: none;
 }
 
-.tabs__info-text-all-paragraf-buttom{
+.tabs-info__text-all-paragraf-buttom{
     margin-top: 20px;
 }
 
@@ -271,7 +482,7 @@ h2{
 
 .customers-block{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .customer-block__comment{
@@ -328,6 +539,7 @@ h2::after{
 .customer-information{
     margin-top: 66px;
     display: flex;
+    margin-left: 20px;
 }
 
 .customer-img_nature{
@@ -352,7 +564,163 @@ h2::after{
     font-family: Raleway;
 }
 
-.customers{
-    margin-bottom: 40px;
+.stylish{
+    background: url("../images/banner2.png") center/cover no-repeat;
+    position: relative;
+    width: 100%;
+    z-index: 0;
+    height: 442px;
+    margin-top: 100px;
 }
 
+.stylish-info__text{
+    font-family: Raleway;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    color: #FFFFFF;
+    padding-top: 80px;
+}
+
+.stylish-info__text::after{
+    content: '';
+    border-bottom: 1px solid #FFFFFF;
+    width: 170px;
+    margin: 40px auto 30px auto;
+    display: block;
+}
+
+.stylish::after{
+    top: 0;
+    left: 0;
+    content: "";
+    z-index: -1;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.stylish-info__paragraf{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+    text-align: center;
+    opacity: 0.8;
+}
+
+.stylish-info__button{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    border: 2px solid #FFFFFF;
+    background-color: rgba(0, 0, 0, 0);
+    width: 370px;
+    height: 58px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    cursor: pointer;
+    margin: 0 auto;
+    margin-top: 70px;
+}
+
+.contact{
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+
+.contact-input__text{
+    font-family: Open Sans;
+    font-style: normal;
+    color: #BDBDBD;
+    font-weight: 400;
+    font-size: 14px;
+    width: 571px;
+    padding: 6px 14px;
+    border: none;
+    position: relative;
+    border-bottom: 1px solid #BDBDBD;
+    margin-top: 40px;
+}
+
+.contact-input__message{
+    display: flex;
+    justify-content: flex-end;
+    width: 569px;
+    font-family: Open Sans;
+    font-style: normal;
+    color: #BDBDBD;
+    font-weight: 400;
+    font-size: 14px;
+    padding: 6px 14px;
+    border: none;
+    position: relative;
+    border-bottom: 1px solid #BDBDBD;
+    margin-top: 63px;
+    margin-left: 20px;
+    height: 154px;
+}
+
+.footer{
+    padding-top: 40px;
+    background-color: #000000;
+    width: 100%;
+	overflow: hidden;
+	line-height: 20px
+}
+
+.footer-text{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    padding: 27px 0;
+}
+
+.footer-img{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+
+}
+
+.footer-img__link{
+    margin: 0 20px;
+}
+
+.contact-container{
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.contact-left{
+    width: 570px;
+}
+
+.contact-button{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    background: #EC7979;
+    color: #FFFFFF;
+    text-align: center;
+    transition: 0.3s;
+    cursor: pointer;
+    padding: 13px 0;
+    width: 370px;   
+}
